--- a/package.json
+++ b/package.json
@@ -7,12 +7,35 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "ui": "npx --yes ui-thing@lastest add"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.9.2",
     "@nuxt/ui": "^2.17.0",
-    "@nuxtjs/tailwindcss": "^6.12.0",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^4.9.0",
     "nuxt": "^3.12.2",
-    "vue": "latest"
+    "nuxt-vuefire": "^1.0.2",
+    "radix-vue": "^1.9.0",
+    "tailwind-variants": "^0.2.1",
+    "vue": "latest",
+    "vue-sonner": "^1.1.3",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@iconify-json/logos": "^1.1.43",
+    "@nuxt/icon": "^1.0.0",
+    "@nuxtjs/color-mode": "^3.4.2",
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@vueuse/nuxt": "^10.11.0",
+    "nuxt-icon": "^1.0.0-beta.7",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.5.3"
   }
 }
